@@ -1,5 +1,9 @@
 gphoto2 2.5.8.1 development
 
+Now maintained (source and issue tracker) in GIT at https://github.com/gphoto/gphoto2 
+
+* added testcamera.pl, for testing attached cameras with gphoto2
+* fixed some bugs
 * updated translations: french, ukrainian, vietnamese, polish, russian, italian
 
 gphoto2 2.5.8 release
